gradle-plugin : PrepareSourcesTask, ListJavaDependenciesTask, DockerImageTask